--- a/app/public/css/perfilcliente.css
+++ b/app/public/css/perfilcliente.css
@@ -147,8 +147,8 @@ body {
 .profile-photo img {
     width: 80px;
     height: 80px;
-    border-radius: 50%;
-    object-fit: cover;
+    border-radius: 50% !important;
+    object-fit: cover !important;
     border: 3px solid #7D2838;
 }
 
