--- a/app/public/css/perfilvender.css
+++ b/app/public/css/perfilvender.css
@@ -38,14 +38,14 @@ header img {
   height: 50px;
   flex-shrink: 0;
   overflow: hidden;
-  border-radius: 50%;
+  border-radius: 50% !important;
 }
 
 .profile-container .profile-pic {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  border-radius: 50%;
+  object-fit: cover !important;
+  border-radius: 50% !important;
 }
 
 /*                       modo desktop                              */
