atualização lavis - cadastro cliente funcionando

--- a/app/views/pages/homecomprador.ejs
+++ b/app/views/pages/homecomprador.ejs
@@ -397,7 +397,7 @@
         <section class="produtos-ocultos">
           <nav class="grid-produtos">
             <h1>Confira</h1>
-            <a href="/categorias" class="ver-tudo">Ver tudo</a>
+            <a href="/blog" class="ver-tudo">Ver tudo</a>
           </nav>
           <section class="product-grid">
             <article class="product-card">
@@ -481,6 +481,7 @@
           <a href="/bossartigo"><img src="imagens/boss milão.png" class="img-Boss"></a>
           <p class="p-artigos">Confira:</p>
           <h3 class="artigo-text">BOSS | MILÃO | VERÃO |</h3>
+          <a href="/blog" class="link-preto">Ver mais</a>
           <br>
         </section>
       <!--                               seção artigos ocultos para mobile                                       -->
@@ -530,7 +531,7 @@
         </figure>
       </section>
       <footer class="footer-link">
-        <a href="/blog" class="link">Ler mais &gt;</a>
+        <a href="/blog" class="link">Ver mais &gt;</a>
       </footer>
 
      </section>
