--- a/app/public/css/perfilvender.css
+++ b/app/public/css/perfilvender.css
@@ -99,7 +99,9 @@ nav a {
 
 .img-tamanho{
   width: 50px;
-  height: auto;
+  height: 50px;
+  border-radius: 50% !important;
+  object-fit: cover !important;
 }
 
 .img-logo{
@@ -120,7 +122,8 @@ nav a {
 .profile-img {
   width: 60px;
   height: 60px;
-  border-radius: 50%;
+  border-radius: 50% !important;
+  object-fit: cover !important;
   margin-right: 15px;
 }
 
